--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+
+@font-face {
+  font-family: AirbnbCereal_W_Bd;
+  src: url(fonts/AirbnbCereal_W_Bd.otf);
+}
 
 * {
   padding: 0;
