--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,9 @@
 } */
 
 .App {
-  transform: translateX(-50%);
-  left: 50%;
+  /* transform: translateX(-50%); */
+  /* left: 50%; */
+  margin: 0 auto;
 }
 
 #forth-section {
@@ -34,24 +35,21 @@
   }
 }
 
-/* #parent {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  border: 8px solid red;
-}
-
-.child {
-  width: 500px;
-  height: 500px;
-  position: fixed;
-  border: 4px solid yellow;
-  top: 50%;
-  left: 50%;
-  background-color: #fff;
-  transform: translateX(-50%) translateY(-50%);
+/* @media (max-width: 338.9px) {
+  .VerySmallPhones\:w-\[30px\] {
+    width: 30px;
+  }
 } */
+
+@media (max-width: 767px) {
+  #forth-section {
+    padding: 44px;
+  }
+  #first-section {
+    width: 100%;
+  }
+  #forthsecfig {
+    width: 100%;
+    padding: 12px;
+  }
+}
